--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 </div>
             </div>
             <div class="image-item">
-                <img src="Customs.png.png" alt="Customs Clearance">
+                <img src="customs.png.png" alt="Customs Clearance">
                 <div class="overlay">
                     <div class="text">Constantly changing regulations, intense documentation, and complex tariff structures are just some of the challenges that surround customs clearances. We understand that no two shipments are the same, and hence we tailor the process to the needs of the project.</div>
                 </div>
             </div>
             <div class="image-item">
-                <img src="freight forwarding.png" alt="Freight Forwarding">
+                <img src="freight forwarding.png.png" alt="Freight Forwarding">
                 <div class="overlay">
                     <div class="text">Increasing regulations add to the complexity of compliance documentation and procedures, leading to mistakes and litigations. Our team’s experience is further enhanced by our board of advisors that comprises senior ex-customs officers.</div>
                 </div>
