--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="image-item">
-                <img src="Freight Forwarding.png" alt="Freight Forwarding">
+                <img src="forwording.png" alt="Freight Forwarding">
                 <div class="overlay">
                     <div class="text">Increasing regulations add to the complexity of compliance documentation and procedures, leading to mistakes and litigations. Our team’s experience is further enhanced by our board of advisors that comprises senior ex-customs officers.</div>
                 </div>
